@startuml

'--------------'
'Hidden members'
'--------------'
hide empty members

'----'
'Move'
'----'
abstract class PieceType {
    - color
    - hasBeenKickedOffTheBoard
    - isBeingPromoted
    + getName()
    + getNextPawnPromotion()
    + getValue()
    + isValidMove()
    + setPieceTypeSpecificAttributes()
}

class Pawn {
    - {static} pawnIsValidMoveRulesEngine
    - {static} pawnMayBeCapturedEnPassantRulesEngine
}

class IsValidMoveParameter {
    - chessboard
    - from
    - to
    - isOpponent
}

interface RulesEngine {
    - rules
    + addRule()
    + process()
}

interface Rule {
    + isApplicable()
    + getResult()
}

'---------'
'Relations'
'---------'
PieceType <|-- Pawn
Pawn *-- PawnIsValidMoveRulesEngine
PawnIsValidMoveRulesEngine -up-|> RulesEngine
PawnIsValidMoveRulesEngine .up[#blue].> IsValidMoveParameter

HasEmptyParametersRule -up-* PawnIsValidMoveRulesEngine
IsFriendlyFireRule -up-* PawnIsValidMoveRulesEngine
IsJumpingRule -up-* PawnIsValidMoveRulesEngine
IsMovingIntoCheckRule -up-* PawnIsValidMoveRulesEngine
PawnIsValidBasicMoveRule -up-* PawnIsValidMoveRulesEngine
PawnIsNotValidDirectionRule -up-* PawnIsValidMoveRulesEngine
PawnIsValidBaselineMoveRule -up-* PawnIsValidMoveRulesEngine
PawnIsValidCaptureMoveRule -up-* PawnIsValidMoveRulesEngine
PawnIsValidEnPassantMoveRule -up-* PawnIsValidMoveRulesEngine
IsNotAValidMoveRule -up-* PawnIsValidMoveRulesEngine

HasEmptyParametersRule -down[#purple]-|> Rule
IsFriendlyFireRule -down[#purple]-|> Rule
IsJumpingRule -down[#purple]-|> Rule
IsMovingIntoCheckRule -down[#purple]-|> Rule
PawnIsValidBasicMoveRule -down[#purple]-|> Rule
PawnIsNotValidDirectionRule -down[#purple]-|> Rule
PawnIsValidBaselineMoveRule -down[#purple]-|> Rule
PawnIsValidCaptureMoveRule -down[#purple]-|> Rule
PawnIsValidEnPassantMoveRule -down[#purple]-|> Rule
IsNotAValidMoveRule -down[#purple]-|> Rule

HasEmptyParametersRule -down[#green]-|> PieceTypeSharedRules
IsFriendlyFireRule -down[#green]-|> PieceTypeSharedRules
IsJumpingRule -down[#green]-|> PieceTypeSharedRules
IsMovingIntoCheckRule -down[#green]-|> PieceTypeSharedRules
PawnIsValidBasicMoveRule -down[#green]-|> PieceTypeSharedRules
PawnIsNotValidDirectionRule -down[#green]-|> PieceTypeSharedRules
PawnIsValidBaselineMoveRule -down[#green]-|> PieceTypeSharedRules
PawnIsValidCaptureMoveRule -down[#green]-|> PieceTypeSharedRules
PawnIsValidEnPassantMoveRule -down[#green]-|> PieceTypeSharedRules
IsNotAValidMoveRule -down[#green]-|> PieceTypeSharedRules

'-----'
'Notes'
'-----'
note top of PawnIsValidMoveRulesEngine {
    If a pawn does not perform a friendly
    fire on one of its own pieces, if it's
    not jumping, if it doesn't create a check
    on its own king, but it does perform a
    valid basic move, a valid capture move or
    a valid en passant move, all in the right
    direction it is a valid move. Otherwise
    it's not a valid move.
}

@enduml
